[package]
name = "data_distributor"
version = "0.1.0"
authors = ["TYPEmber <nono02200059@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "receiver"
path = "src/bin/test_utils/receiver.rs"

[[bin]]
name = "sender"
path = "src/bin/test_utils/sender.rs"

[dependencies]
tokio = { version = "*", features = ["full"]}
socket2 = "*"
crossbeam = "*"
structopt = "*"